2007-08-08  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(ipmiconsole_engine_cleanup): Skip majority of code if engine was
	never initialized.
	
2007-08-07  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(ipmiconsole_engine_submit, ipmiconsole_engine_submit_block):
	Collapse both functions into one function, with a flag for
	blocking or non-blocking.

	* ipmiconsole/src/ipmiconsole/ipmiconsole.c (main): Adjust for API
	change appropriately.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h
	(ipmiconsole_ctx_fd, ipmiconsole_engine_teardown): Fix comments.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c,
	ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c: Creat new
	IPMICONSOLE_ERR_EXCESSIVE_RETRANSMISSIONS error code.  Replace
	several of the IPMICONSOLE_ERR_BMC_ERROR errnums with this new
	code.
	
2007-08-07  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/bmc-config-value.h,
	bmc-config/src/bmc-config-validate.c
	(number_range_one_byte_non_zero): New function.

	* bmc-config/src/bmc-sol-conf-section.c
	(bmc_sol_conf_section_get): Adjust character_accumulate_interval
	field to only support non-zero input.  Zero is a reserved number.
	
2007-08-06  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-udm.c (__guaranteed_memset),
	common/src/secure.c (secure_memset),
	common/src/cmdline-parse-common.c (__secure_memset): Fix
	secure/guaranteed memset corner case.
	
2007-08-06  Albert Chu <chu11@llnl.gov>

	* ac_ipmi_monitoring_sdr_cache_dir.m4,
	ac_ipmi_monitoring_sensor_config_file.m4,
	ac_ipmidetect_config_file.m4, ac_ipmidetectd_config_file.m4,
	ac_ipmipower_config_file.m4: Replace hard-coded /etc and /var with
	${sysconfdir} and ${localstatedir} respecively.  Remove option to
	specify config files.  Location of config files is now controlled
	through setting of --localstatedir and --sysconfidr.